overflow fix

--- a/src/app/pages/home/dashboard/dashboard.component.scss
+++ b/src/app/pages/home/dashboard/dashboard.component.scss
@@ -1,6 +1,6 @@
 .greetings {
   font-family: "Inter", sans-serif;
-  font-size: clamp(1rem, 10vw, 1.5rem);
+  font-size: clamp(0.75rem, 5vw, 1.5rem);
   margin-right: 20px;
   filter: opacity(0.7);
   span:nth-child(2) {
@@ -16,6 +16,10 @@
   align-items: center;
   gap: clamp(5px, 2vw, 30px);
   font-family: "Inter", sans-serif;
+
+  &:nth-last-child(1) {
+    margin-bottom: 20px;
+  }
 
   .box {
     // height: 160px;
