--- a/src/app/pages/home/home/home.component.scss
+++ b/src/app/pages/home/home/home.component.scss
@@ -203,6 +203,11 @@
   }
 }
 
+.main-content {
+  height: calc(100%);
+  overflow-y: auto;
+}
+
 .mobile {
   @media screen and (max-width: 768px) {
     display: none !important;
