--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,7 @@
 body {
   font-family: "Roboto", sans-serif;
   background: #f6f7f8;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 a {
@@ -42,6 +42,10 @@ header {
   }
 }
 
+.wrapper {
+  overflow: hidden;
+}
+
 .content {
   display: flex;
   flex-direction: column;
@@ -56,8 +60,7 @@ header {
 .content-wrapper {
   height: 100%;
   padding: 10px 20px 60px 20px;
-  height: calc(100% - 80px);
-  overflow-y: auto;
+  overflow-y: scroll !important;
 }
 
 .poppins {
